# AutoExcel

./: .gitignore  Notes.md  README.md  env.yml  env_dev.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
auto_excel/: main.py  query_engine.py
autoexcel/: __init__.py  analysis.py  analysis_summary.py  main.py  pivot_tables.py  query_engine.py  test.py
autoexcel/utils/: config.yml  dataframe_utils.py  llm_utils.py  utils.py
examples/: Example 1.py  Set up.md
examples/notbooks/: Example 1 - FY Caseload Analysis.ipynb
examples/script/: Example 1 - Caseload Analysis.md  Example 1 - FY Caseload Analysis.py  Example 2 - LLM interpretation.py
