[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
local_scheme="no-local-version"
version_file = "autoexcel/_version.py"


[project]
name = "autoexcel"
authors = [
    {name = "Logan Lang", email = "lllang@mix.wvu.edu"}
]
description = "AutoExcel is a library with scripts that automate excel workbooks"
readme = {file = "README.md", content-type = "text/markdown"}  # Ensure this matches the file used
requires-python = ">=3.8"
keywords = ["excel", "automation", "python"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

dependencies = [
    "python-dotenv",
    "matplotlib",
    "seaborn",
    "variconfig",
    "pandas",
    "beautifulsoup4",
    "requests",
    "openpyxl",
    "tabulate",
    "pywin32"

]

[project.optional-dependencies]


dev = [
    "sphinx", 
    "sphinx_rtd_theme",
]


[project.urls]
Repository = "https://github.com/lllangWV/AutoExcel"
Issues = "https://github.com/lllangWV/AutoExcel/issues"
Changelog = "https://github.com/lllangWV/AutoExcel/CHANGELOG.md"



[tool.setuptools.packages.find]
where = ["."]
include = ["autoexcel*"]
exclude = ["autoexcel.tests*"]

